primera estructura de proyecto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Probando Git</title>
   </head>
   <body>
-    <h1>Primer proyecto con Gitgit</h1>
+    <h1>Primer proyecto con Git</h1>
     <h2>Añadiendo un cambio</h2>
+    <ul>
+      <li>Esto es una opcion de lista</li>
+      <li>Esto es otra opcion de lista</li>
+    </ul>
   </body>
 </html>
